--- a/valentin.html
+++ b/valentin.html
@@ -8,13 +8,26 @@
 </head>
 <body>
     <h1>Hilf dem Liebenden, seine Liebe zu finden!</h1>
+
     <div id="game-container">
         <div id="player"></div>
         <div id="love"></div>
         <div class="obstacle" style="top: 100px; left: 150px;"></div>
         <div class="obstacle" style="top: 200px; left: 250px;"></div>
     </div>
+
     <p id="message"></p>
+
+    <!-- Mobile Steuerung -->
+    <div id="controls">
+        <button id="up">▲</button>
+        <div>
+            <button id="left">◀</button>
+            <button id="down">▼</button>
+            <button id="right">▶</button>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
