valentin.html aktualisieren

--- a/valentin.html
+++ b/valentin.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hilf dem Liebenden, seine Liebe zu finden!</h1>
-
+    <h1>Bewege dein Handy, um die Liebe zu finden! ❤️</h1>
+    
+    <button id="startGyro">📱 Gyroskop aktivieren</button>
+    
     <div id="game-container">
         <div id="player"></div>
         <div id="love"></div>
@@ -17,16 +19,6 @@
     </div>
 
     <p id="message"></p>
-
-    <!-- Mobile Steuerung -->
-    <div id="controls">
-        <button id="up">▲</button>
-        <div>
-            <button id="left">◀</button>
-            <button id="down">▼</button>
-            <button id="right">▶</button>
-        </div>
-    </div>
 
     <script src="script.js"></script>
 </body>
