--- a/valentin.html
+++ b/valentin.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Bewege dein Handy, um die Liebe zu finden! ❤️</h1>
-    
-    <button id="startGyro">📱 Gyroskop aktivieren</button>
+    <h1>Finde deine Liebe! ❤️</h1>
     
     <div id="game-container">
         <div id="player"></div>
