--- a/valentin.html
+++ b/valentin.html
@@ -18,6 +18,16 @@
 
     <p id="message"></p>
 
+    <!-- Steuerung für Mobile -->
+    <div id="controls">
+        <button id="up">⬆️</button>
+        <div>
+            <button id="left">⬅️</button>
+            <button id="down">⬇️</button>
+            <button id="right">➡️</button>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
