--- a/valentin.html
+++ b/valentin.html
@@ -10,8 +10,8 @@
     <h1>Hilf der Taube, ihre Liebe zu finden! ❤️</h1>
     
     <div id="game-container">
-        <div id="player">🕊️</div>
-        <div id="love">🕊️</div>
+        <div id="player">🦜</div>
+        <div id="love">🐦</div>
         <div class="obstacle" style="top: 100px; left: 150px;">🌳</div>
         <div class="obstacle" style="top: 200px; left: 250px;">🧱</div>
     </div>
